experiments/security-evaluation/setup/example-app/yamls/allow-application-pods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-application-pods
spec:
  podSelector:
    matchLabels:
      app: example-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: example-app
        
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: example-app
      ports:
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
    - Egress
